--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
-    <h1>iamete kudassai
+    <h1>bolsolula pensante na voida:
     
     </h1>
     <img src="bolsolula.jpg" alt="">
