--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>bolsolula pensante na voida:<h1>
     
     </h1>
+
     <img src="bolsolula.jpg" alt="">
+    <img src="" alt="">
 </body>
 </html>
