--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>bolsolula pensante na voida:<h1>
-    
-    </h1>
+    <h1>bolsolula pensante na voida:</h1>
+        <img src="bolsolula.jpg" alt="">
+        <nav>
+            <div class="logo">
+           <a href="sobremim.html"></a>
 
-    <img src="bolsolula.jpg" alt="">
+            </div>
+        </nav>
 </body>
 </html>
