--- a/sobremim.html
+++ b/sobremim.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <div class="logo">
+       <a href="sobremim.html"></a>
+
+        </div>
+    </nav>
     <h1>neymateamo(abner)</h1>
     <h2>cr7melhorqueomessi(jouse)</h2>
     <h3>messiomior(leo)</h3>
