--- a/sobremim.html
+++ b/sobremim.html
@@ -8,7 +8,7 @@
 <body>
     <nav>
         <div class="logo">
-       <a href="sobremim.html"></a>
+       <a href="index.html"></a>
 
         </div>
     </nav>
