--- a/index.html
+++ b/index.html
@@ -16,5 +16,12 @@
 
             </div>
         </nav>
+        <header>
+            <section id="banner">
+<div class="container">
+    
+</div>
+            </section>
+        </header>
 </body>
 </html>
